Added EF Core and Default DB
The Bible DB is created using EF Core's command line utility. However the population of the Bible DB's data has to be done using text files containing the verses since attempting to let EF Core do it causes errors since the initial migration file is too large (contains too many string literals)

--- a/bible-study-colab-api.csproj
+++ b/bible-study-colab-api.csproj
@@ -1,15 +1,41 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>BibleStudyColabApi</RootNamespace>
+    <AssemblyName>BibleStudyColabApi</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <Folder Include="Verses\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Verses\ASV_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Verses\BBE_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Verses\DBY_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Verses\KJV_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Verses\WBT_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Verses\WEB_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Verses\YLT_Verses.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
