Added OData configuration and controllers

--- a/bible-study-colab-api.csproj
+++ b/bible-study-colab-api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
